<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
    	android:text="@string/statcalc_cohort_desc"
    	android:textStyle="bold"
    	android:textSize="20dip"
    	android:padding="10dip"
    	android:gravity="center"
    	/>
	<View android:layout_width="fill_parent" android:layout_height="2dip" android:background="#a2b9d7"/>
	<ScrollView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical">
		<TableLayout 
    		android:layout_width="fill_parent"
    		android:layout_height="130dip"
    		android:stretchColumns="1,2,3,4"
    		android:gravity="center">
    		<TableRow>
        		<TextView
            		android:layout_column="2"
            		android:text="Kelsey"
            		android:gravity="center"
            		android:textColor="#42638c"
            		android:textSize="16dip"
            		android:paddingRight="10dip"
            		android:paddingBottom="5dip" />
        		<TextView
        			android:layout_column="3"
            		android:text="Fleiss"
            		android:gravity="center"
            		android:textColor="#42638c"
            		android:textSize="16dip"
            		android:paddingRight="10dip"
            		android:paddingBottom="5dip" />
        		<TextView
        			android:layout_column="4"
            		android:text="Fleiss w/ CC"
            		android:gravity="center"
            		android:textColor="#42638c"
            		android:textSize="16dip"
            		android:paddingRight="10dip"
            		android:paddingBottom="5dip" />
    		</TableRow>
    		<TableRow>
        		<TextView
            		android:layout_column="1"
            		android:text="@string/statcalc_exposed"
            		android:gravity="center"
            		android:textColor="#42638c"
            		android:textSize="16dip"
            		android:paddingLeft="10dip"
            		android:paddingBottom="5dip" />
		        <TextView
		        	android:id="@+id/txtKelseyCases"
		        	android:layout_column="2"
		            android:text="..."
		            android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		        	android:layout_column="3"
		        	android:id="@+id/txtFleissCases"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		        	android:layout_column="4"
		        	android:id="@+id/txtFleissCCCases"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
    		</TableRow>
    		<TableRow>
        		<TextView
            		android:layout_column="1"
            		android:text="@string/statcalc_unexposed"
            		android:gravity="center"
		            android:textColor="#42638c"
		            android:textSize="16dip"
		            android:paddingLeft="10dip"
		            android:paddingBottom="5dip" />
		        <TextView
		        	android:layout_column="2"
		        	android:id="@+id/txtKelseyControls"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		        	android:layout_column="3"
		        	android:id="@+id/txtFleissControls"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		        	android:layout_column="4"
		        	android:id="@+id/txtFleissCCControls"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
    		</TableRow>
    		<TableRow>
        		<TextView
            		android:layout_column="1"
            		android:text="@string/statcalc_total"
            		android:gravity="center"
		            android:textColor="#42638c"
		            android:textSize="16dip"
		            android:paddingLeft="10dip"
		            android:paddingBottom="5dip" />
		        <TextView
			        android:layout_column="2"
		        	android:id="@+id/txtKelseyTotal"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		    	    android:layout_column="3"
		        	android:id="@+id/txtFleissTotal"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
		        <TextView
		        	android:layout_column="4"
		        	android:id="@+id/txtFleissCCTotal"
		            android:text="..."
				    android:textStyle="bold"
		            android:gravity="center"
		            android:padding="3dip" />
    		</TableRow>
		</TableLayout>
		<TableLayout
			android:layout_width="wrap_content"
    		android:layout_height="fill_parent"
    		android:stretchColumns="1"
    		android:gravity="center"
    		android:padding="3dip">
    		<TableRow>
				<TextView  
				    android:layout_width="150dip" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_two_sided"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<Spinner 
					android:id="@+id/ddlConfidence"
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:prompt="@string/conf_level_prompt"
					android:layout_column="1"
					android:layout_span="2"
					/>
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_power"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<TextView  
					android:id="@+id/txtPower"
				    android:layout_width="fill_parent" 
				    android:layout_height="wrap_content" 
				    android:text="80.0%"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:layout_column="2"
				    android:gravity="right"
				    />
			</TableRow>
			<TableRow>
				<SeekBar 
					android:id="@+id/skbPower"
					android:layout_width="fill_parent"
					android:layout_height="37dip"	
					android:max="10000"
					android:progress="8000"
					android:layout_span="3"
					/>
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_ratio_exposed"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<EditText  
					android:id="@+id/txtControlRatio"
				    android:layout_width="80dip"
				    android:layout_height="wrap_content"
				    android:layout_column="2"
				    android:text="1.0"
				    android:imeOptions="actionDone"
				    android:numeric="decimal" 
				    />
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_pct_out_uexp"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<TextView  
					android:id="@+id/txtPercentExposed"
				    android:layout_width="fill_parent" 
				    android:layout_height="wrap_content" 
				    android:text="40.0%"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:layout_column="2"
				    android:gravity="right"
				    />
			</TableRow>
			<TableRow>
				<SeekBar 
					android:id="@+id/skbPercentExposed"
					android:layout_width="fill_parent"
					android:layout_height="37dip"	
					android:max="10000"
					android:progress="4000"
					android:layout_span="3"
					/>
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_risk_ratio"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<EditText  
					android:id="@+id/txtRiskRatio"
				    android:layout_width="80dip"
				    android:layout_height="wrap_content"
				    android:layout_column="2"
				    android:text="5.0"
				    android:imeOptions="actionDone"
				    android:numeric="decimal" 
				    />
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_odds_ratio"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<EditText  
					android:id="@+id/txtOddsRatio"
				    android:layout_width="80dip"
				    android:layout_height="wrap_content"
				    android:layout_column="2"
				    android:text="5.0"
				    android:imeOptions="actionDone"
				    android:numeric="decimal" 
				    />
			</TableRow>
			<TableRow>
				<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
				    android:text="@string/statcalc_pct_out_exp"
				    android:textColor="#42638c"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:paddingRight="5dip"
				    android:paddingBottom="5dip"
				    android:layout_column="0"
				    />
				<TextView  
					android:id="@+id/txtPercentCasesExposure"
				    android:layout_width="fill_parent" 
				    android:layout_height="wrap_content" 
				    android:text="76.9%"
				    android:textStyle="bold"
				    android:textSize="16dip"
				    android:layout_column="2"
				    android:gravity="right"
				    />
			</TableRow>
			<TableRow>
				<SeekBar 
					android:id="@+id/skbPercentCasesExposure"
					android:layout_width="fill_parent"
					android:layout_height="37dip"	
					android:max="10000"
					android:progress="7690"
					android:layout_span="3"
					/>
			</TableRow>
		</TableLayout>	
	</LinearLayout>
	</ScrollView>
</LinearLayout>